# PromptMotionLab

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md
.claude/: settings.local.json
Server-Python/: .env.production.example  README.md  pyproject.toml  requirements-stt-google.txt  requirements.txt
Server-Python/app/: __init__.py  dependencies.py  main.py  self_check.py
Server-Python/app/api/: routes.py
Server-Python/app/contracts/: __init__.py  character_profile.py  enriched_prompt.py  motion_spec.py  procedural_gesture.py  requests.py  responses.py  runtime_behavior.py  speech_timeline.py  stt.py  tts.py
Server-Python/app/providers/llm/: __init__.py  base.py  mock_provider.py
Server-Python/app/providers/runtime/: __init__.py  base.py  fast_path_provider.py  mock_provider.py  openai_provider.py  profile_prompt_builder.py  routing_openai_provider.py
Server-Python/app/security/: __init__.py  body_size_limit.py  client_identity.py  log_redaction.py  rate_limit.py  websocket_limits.py
Server-Python/app/services/: __init__.py  character_profile_store.py  latency_metrics_logger.py  motion_generation_service.py  provider_failure_logger.py  runtime_async_job_service.py  runtime_character_service.py  runtime_scenario_service.py  runtime_session_store.py  runtime_turn_async_job_service.py  service_limits.py  stt_service.py  tts_async_job_service.py  tts_service.py
Server-Python/app/storage/: __init__.py  prompt_export_store.py
Server-Python/scripts/: benchmark_runtime_turn_tts_latency.py  smoke_openai_realtime_stt.py
Server-Python/tests/: test_api.py
(+868 files in other folders)
